--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = "1.10" %}
+{% set runc_version = "0.1.0" %}
 {% set sha256 = "bcbe8ada8c435a253b1fa438f505dd311832a88f52316fd7d30342b106a4242c" %}
 
 package:
@@ -6,9 +7,13 @@ package:
   version: {{ version }}
 
 source:
-  fn: gosu-{{ version }}.tar.gz
-  url: https://github.com/tianon/gosu/archive/{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  - url: https://github.com/tianon/gosu/archive/{{ version }}.tar.gz
+    sha256: {{ sha256 }}
+    folder: src/github.com/tianon/gosu
+
+  - url: https://github.com/opencontainers/runc/archive/v{{ runc_version }}.tar.gz
+    sha256: 78ae42905c0f26fcfa9353e48e1a001b5b5c3c94b33e2ceacc6bc84c23c61a88 
+    folder: src/github.com/opencontainers/runc
 
 build:
   number: 0
@@ -29,7 +34,7 @@ about:
   home: https://github.com/tianon/gosu
   license: GPL-3
   license_family: GPL
-  license_file: "{{ SRC_DIR }}/LICENSE"
+  license_file: src/github.com/tianon/gosu/LICENSE
   summary: Simple Go-based setuid+setgid+setgroups+exec
 
   description: |
