Template out checksums
As a convenience for maintenance, template the checksums as well.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,7 @@
 {% set version = "1.10" %}
 {% set runc_version = "0.1.0" %}
+{% set sha256 = "bcbe8ada8c435a253b1fa438f505dd311832a88f52316fd7d30342b106a4242c" %}
+{% set runc_sha256 = "78ae42905c0f26fcfa9353e48e1a001b5b5c3c94b33e2ceacc6bc84c23c61a88" %}
 
 package:
   name: gosu
@@ -7,11 +9,11 @@ package:
 
 source:
   - url: https://github.com/tianon/gosu/archive/{{ version }}.tar.gz
-    sha256: bcbe8ada8c435a253b1fa438f505dd311832a88f52316fd7d30342b106a4242c
+    sha256: {{ sha256 }}
     folder: src/github.com/tianon/gosu
 
   - url: https://github.com/opencontainers/runc/archive/v{{ runc_version }}.tar.gz
-    sha256: 78ae42905c0f26fcfa9353e48e1a001b5b5c3c94b33e2ceacc6bc84c23c61a88 
+    sha256: {{ runc_sha256 }}
     folder: src/github.com/opencontainers/runc
 
 build:
