Place `folder` first in `source`
Mirrors the old format in `source` with `fn` nicely. Also makes it easy
to see where things are being downloaded, which is our primary concern
in terms of build script maintenance.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,13 +8,13 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://github.com/tianon/gosu/archive/{{ version }}.tar.gz
+  - folder: src/github.com/tianon/gosu
+    url: https://github.com/tianon/gosu/archive/{{ version }}.tar.gz
     sha256: {{ sha256 }}
-    folder: src/github.com/tianon/gosu
 
-  - url: https://github.com/opencontainers/runc/archive/v{{ runc_version }}.tar.gz
+  - folder: src/github.com/opencontainers/runc
+    url: https://github.com/opencontainers/runc/archive/v{{ runc_version }}.tar.gz
     sha256: {{ runc_sha256 }}
-    folder: src/github.com/opencontainers/runc
 
 build:
   number: 1
