--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,14 @@
-{% set goname = "github.com/golang/dep" %}
+{% set goname = "github.com/tianon/gosu" %}
 {% set version = "1.11" %}
-# The runc version much match the upstream Dockerfile
-# https://github.com/tianon/gosu/blob/master/Dockerfile
-{% set runc_version = "1.0.0-rc5" %}
 
 {% set name = goname.split('/')[-1] %}
 {% set pkg_src = ('src/'+goname).replace("/",os.sep) %}
+
+# The runc version much match the upstream Dockerfile
+# https://github.com/tianon/gosu/blob/master/Dockerfile
+{% set runc_goname = "github.com/opencontainers/runc" %}
+{% set runc_version = "1.0.0-rc5" %}
+{% set runc_pkg_src = ('src/'+runc_goname).replace("/",os.sep) %}
 
 package:
   name: {{ name }}
@@ -13,11 +16,11 @@ package:
 
 source:
   - folder: {{ pkg_src }}
-    url: https://{{pkg_src}}/archive/{{ version }}.tar.gz
+    url: https://{{ goname }}/archive/{{ version }}.tar.gz
     sha256: d03208fd7ef983e4a606f861a5efcdc5a1980952a91febba3f67057800da6701
 
-  - folder: src/github.com/opencontainers/runc
-    url: https://github.com/opencontainers/runc/archive/v{{ runc_version }}.tar.gz
+  - folder: {{ runc_pkg_src }}
+    url: https://{{ runc_goname }}/archive/v{{ runc_version }}.tar.gz
     sha256: 770e180d1cca1f3c1a67512ebf9720caafe97af4fc2fe12fa43a3cf7bfa77522
 
 build:
@@ -26,6 +29,7 @@ build:
   script:
     - pushd {{ pkg_src }}
     - go install -v -ldflags '-d -s -w'
+    - go test -v
 
 requirements:
   build:
@@ -35,8 +39,10 @@ test:
   commands:
     - test -x $PREFIX/bin/gosu
     - gosu --version
-    - gosu nobody id;
-    - gosu nobody ls -l /proc/self/fd
+
+    # These require root to test
+    # - gosu nobody id;
+    # - gosu nobody ls -l /proc/self/fd
 
 about:
   home: https://github.com/tianon/gosu
