Fix linter error

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,13 +2,13 @@
 {% set version = "1.11" %}
 
 {% set name = goname.split('/')[-1] %}
-{% set pkg_src = ('src/'+goname).replace("/",os.sep) %}
+{% set pkg_src = ('src/'+goname).replace("/","\\" if win else "/") %}
 
 # The runc version much match the upstream Dockerfile
 # https://github.com/tianon/gosu/blob/master/Dockerfile
 {% set runc_goname = "github.com/opencontainers/runc" %}
 {% set runc_version = "1.0.0-rc5" %}
-{% set runc_pkg_src = ('src/'+runc_goname).replace("/",os.sep) %}
+{% set runc_pkg_src = ('src/'+runc_goname).replace("/", "\\" if win else "/") %}
 
 package:
   name: {{ name }}
